--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "version": "2.0.2",
     "type": "module",
     "scripts": {
-        "dev": "vite",
+        "start": "vite",
         "build": "tsc -b && vite build",
         "lint": "eslint .",
         "preview": "vite preview"
