add user, country. city management page

--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
         "preview": "vite preview"
     },
     "dependencies": {
+        "@ant-design/pro-components": "^2.8.10",
         "@fullcalendar/core": "^6.1.15",
         "@fullcalendar/daygrid": "^6.1.15",
         "@fullcalendar/interaction": "^6.1.15",
@@ -20,14 +21,18 @@
         "@react-jvectormap/core": "^1.0.4",
         "@react-jvectormap/world": "^1.1.2",
         "@reduxjs/toolkit": "1.9.3",
+        "antd": "^5.27.0",
         "apexcharts": "^4.1.0",
         "async-mutex": "0.4.0",
         "axios": "^1.11.0",
         "clsx": "^2.1.1",
+        "dayjs": "^1.11.10",
         "flatpickr": "^4.6.13",
         "js-cookie": "^3.0.5",
+        "marked": "^16.2.0",
         "react": "^19.0.0",
         "react-apexcharts": "^1.7.0",
+        "react-device-detect": "^2.2.3",
         "react-dnd": "^16.0.1",
         "react-dnd-html5-backend": "^16.0.1",
         "react-dom": "^19.0.0",
@@ -38,15 +43,21 @@
         "react-router-dom": "^7.8.1",
         "react-toastify": "^11.0.5",
         "swiper": "^11.2.3",
-        "tailwind-merge": "^3.0.1"
+        "tailwind-merge": "^3.0.1",
+        "turndown": "^7.2.1",
+        "uuid": "^9.0.1"
     },
     "devDependencies": {
         "@eslint/js": "^9.19.0",
         "@tailwindcss/postcss": "^4.0.8",
+        "@tailwindcss/typography": "^0.5.16",
         "@types/js-cookie": "^3.0.6",
+        "@types/lodash": "^4.17.20",
         "@types/node": "^24.3.0",
         "@types/react": "^19.0.12",
         "@types/react-dom": "^19.0.4",
+        "@types/turndown": "^5.0.5",
+        "@types/uuid": "^10.0.0",
         "@vitejs/plugin-react": "^4.3.4",
         "eslint": "^9.19.0",
         "eslint-plugin-react-hooks": "^5.0.0",
