--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
         "dayjs": "^1.11.10",
         "flatpickr": "^4.6.13",
         "js-cookie": "^3.0.5",
+        "lucide-react": "^0.548.0",
         "marked": "^16.2.0",
         "react": "^19.0.0",
         "react-apexcharts": "^1.7.0",
