--- a/package.json
+++ b/package.json
@@ -47,7 +47,8 @@
         "swiper": "^11.2.3",
         "tailwind-merge": "^3.0.1",
         "turndown": "^7.2.1",
-        "uuid": "^9.0.1"
+        "uuid": "^9.0.1",
+        "react-loading-skeleton": "^3.5.0"
     },
     "devDependencies": {
         "@eslint/js": "^9.19.0",
