--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
         "js-cookie": "^3.0.5",
         "lucide-react": "^0.548.0",
         "marked": "^16.2.0",
+        "nanoid": "^5.1.6",
         "react": "^19.0.0",
         "react-apexcharts": "^1.7.0",
         "react-device-detect": "^2.2.3",
@@ -40,6 +41,7 @@
         "react-dropzone": "^14.3.5",
         "react-helmet-async": "^2.0.5",
         "react-icons": "^5.5.0",
+        "react-loading-skeleton": "^3.5.0",
         "react-redux": "8.0.5",
         "react-router": "^7.1.5",
         "react-router-dom": "^7.8.1",
@@ -47,8 +49,7 @@
         "swiper": "^11.2.3",
         "tailwind-merge": "^3.0.1",
         "turndown": "^7.2.1",
-        "uuid": "^9.0.1",
-        "react-loading-skeleton": "^3.5.0"
+        "uuid": "^9.0.1"
     },
     "devDependencies": {
         "@eslint/js": "^9.19.0",
