--- a/package.json
+++ b/package.json
@@ -45,7 +45,7 @@
         "react-leaflet": "4.0.1",
         "react-leaflet-cluster": "2.1.0",
         "react-loading-skeleton": "^3.5.0",
-        "react-redux": "8.0.5",
+        "react-redux": "^9.2.0",
         "react-router": "^7.1.5",
         "react-router-dom": "^7.8.1",
         "react-toastify": "^11.0.5",
