add vercel middleware

--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
         "@react-jvectormap/core": "^1.0.4",
         "@react-jvectormap/world": "^1.1.2",
         "@reduxjs/toolkit": "^2.11.2",
+        "@vercel/node": "^5.5.16",
         "antd": "^5.27.0",
         "apexcharts": "^4.1.0",
         "async-mutex": "0.4.0",
